Bug 274912 - Start Page 'Places' doesn't respect double-click folders setting
Summary: Start Page 'Places' doesn't respect double-click folders setting
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 274911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-04 14:21 UTC by Christopher Martin
Modified: 2012-10-19 13:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Martin 2011-06-04 14:21:38 UTC
Version:           2.6 (using KDE 4.6.3) 
OS:                Linux

I have KDE set to open folders on double-click, and while this is generally respected within Gwenview, one exception is the Start Page.

The Start Page's "Places" icons (Home, Root, Trash, etc.) require just a single click to open, which is disconcerting because they look like folders, so I naturally double-click on them. This results in me selecting some other folder that appears beneath the Start Page icon inadvertently.

Reproducible: Always

Steps to Reproduce:
Start Gwenview, Select "Places" on Start Page, and click an icon. Only an issue if folders are set to open on double-click.

Actual Results:  
Folders open after just one click.

Expected Results:  
Folders should open after two clicks.
Comment 1 Aurelien Gateau 2011-06-05 11:22:01 UTC
*** Bug 274911 has been marked as a duplicate of this bug. ***
Comment 2 Aurelien Gateau 2011-06-05 11:25:30 UTC
This was done on purpose. There is no reason to require double click on the start page because one cannot select multiple items there. The pointing-finger cursor was supposed to provide a hint of this behavior.

Maybe the start page should "swallow" the double click to avoid propagating the second click?
Comment 3 Christopher Martin 2011-06-05 14:51:03 UTC
It's really an issue of consistency - I double-click on the folders in Dolphin, I double-click on the folders in Gwenview, and I always forget that I should just single-click on the Home folder (or whatever) on the Start Page.

Swallowing the second click would definitely help if you don't want to change Gwenview's basic behaviour.
Comment 4 Aurelien Gateau 2011-06-10 17:15:52 UTC
Git commit 840edc7f5d812d174966fdc59b524b300c92b2a1 by Aurélien Gâteau.
Committed on 10/06/2011 at 17:15.
Pushed by gateau into branch 'master'.

Follow KDE settings for double-click vs single-click on start page as well

BUG: 274912

@Christopher: After playing around with various settings, I realized the UI
of the start page is too similar to the thumbnail view to use a different
behavior.

M  +15   -5    app/startpage.cpp     
M  +1    -1    app/startpage.h     
M  +5    -5    app/startpage.ui     

http://commits.kde.org/gwenview/840edc7f5d812d174966fdc59b524b300c92b2a1