Follow KDE settings for double-click vs single-click on start page as well

BUG: 274912

@Christopher: After playing around with various settings, I realized the UI
of the start page is too similar to the thumbnail view to use a different
behavior.